--- a/.env
+++ b/.env
@@ -4,4 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
+
+# Postgres on local docker container
+# DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
+
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL="postgres://postgres.jelcipocjwpyidnstnvr:mxtHvSfpNmAQXYeH@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgres://postgres.jelcipocjwpyidnstnvr:mxtHvSfpNmAQXYeH@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
