--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
