--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-spinners": "^0.13.8",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
+    "uuid": "^9.0.1",
     "zod": "^3.23.4"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
