--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1",
