--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-switch": "^7.0.0",
     "resend": "^3.2.0",
