update example env file

--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,5 @@ GITHUB_CLIENT_SECRET=XXXXXXXX
 # Resend API key for verification emails
 RESEND_API_KEY=XXXXXXXX
 
-
+# Public URL of the app
+NEXT_PUBLIC_APP_URL=http://localhost:3000
